welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: ';' expected but '(' found.
var T:Array[Color](getMondeHauteur())
                  ^