welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() { 
  var x = getMondeLargeur();
  motif();
  
  
  
  
}






def motif() {
var T:Array[Color](getMondeHauteur())
  for (i<- 1 to (getMondeHauteur())) {
    getCouleurSol();
    avance()
  }
}